# sim2real

./: .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  monitor_run.py  pyproject.toml  run.sh  setup.sh  test_system.py
.github/workflows/: ci.yml
airsim_camera/: package.xml  setup.cfg  setup.py
airsim_camera/airsim_camera/: rtsp_image_receiver.py
src/: monitor_run.py  run.py
src/airsim/: airsim_display_control.py  as_ctrl.py  as_display.py  as_image_show.py
src/configs/: drone.py  model.py  system.py
src/simulation/: camera_bridge.yaml
src/utils/: create_aruco.py  create_aruco8.py  detect_aruco.py  evdev_test.py  event_bus.py  joystick_monitor.py  joystick_monitor_ver1.py  joystick_monitor_ver2.py  joystick_test.py  listen_to_joystick.py  logger.py  sub_image.py  test_check.py  test_mavlink.py
tests/: test_monitor_run.py
