[project]
name = "sim2real"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CTHMIT", email = "chuntsehsu@gmail.com"},
]
dependencies = ["mavsdk>=3.0.1", "asyncio>=3.4.3", "uvloop>=0.21.0", "pydantic>=2.11.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = false
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest",
    "PyYAML>=6.0.2",
    "lark>=1.2.2",
    "numpy>=2.2.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
